# ElectronBot

./: .gitignore
3.Software/SDK/: CMakeLists.txt  README.md  build.sh  conanfile.txt
3.Software/SDK/ElectronBotSDK-LowLevel/: CMakeLists.txt
3.Software/SDK/ElectronBotSDK-LowLevel/lib/: USBInterface.h
3.Software/SDK/ElectronBotSDK-LowLevel/src/: electron_low_level.cpp  electron_low_level.h  sample.cpp
3.Software/SDK/ElectronBotSDK-Player/: CMakeLists.txt
3.Software/SDK/ElectronBotSDK-Player/lib/: electron_low_level.h
3.Software/SDK/ElectronBotSDK-Player/src/: electron_player.cpp  electron_player.h  sample.cpp
3.Software/SDK/ElectronBotSDK-UnityBridge/: CMakeLists.txt
3.Software/SDK/ElectronBotSDK-UnityBridge/src/: electron_sdk_unity_bridge.cpp  electron_sdk_unity_bridge.h
3.Software/SDK/_Libs/mac/: opencv4_lib
3.Software/SDK/_Libs/mac/include/: opencv4
3.Software/SDK/_Libs/mac/lib/: libusb.h  usb.h
3.Software/Unity/ElectronBot-Studio/Assets/Editor/: CopyPath.cs
3.Software/Unity/ElectronBot-Studio/Assets/Plugins/mac/: libElectronBotSDK-LowLevel.dylib  libElectronBotSDK-UnityBridge.dylib  libopencv_core.dylib  libopencv_imgcodecs.dylib  libopencv_imgproc.dylib  libopencv_videoio.dylib
3.Software/Unity/ElectronBot-Studio/Assets/Scenes/: MainScene.unity
3.Software/Unity/ElectronBot-Studio/Assets/Scripts/: ILoggerListener.cs  LogButtonBehaviour.cs  Logger.cs  MakeCameraFullScreen.cs  PlayButtonBehavior.cs  RobotController.cs  UnityGetImageFromCpp.cs
3.Software/Unity/ElectronBot-Studio/Assets/Scripts/Utils/: LogManager.cs  PlatformUtils.cs
3.Software/Unity/ElectronBot-Studio/ProjectSettings/: ProjectSettings.asset
3.Software/Unity/ElectronBot-Studio/UserSettings/: EditorUserSettings.asset  Search.settings
3.Software/Unity/ElectronBot-Studio/UserSettings/Layouts/: default-2021.dwlt
